[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/bg/wooden.png" type="Texture" id=1]
[ext_resource path="res://assets/icon/grains.png" type="Texture" id=2]
[ext_resource path="res://assets/icon/rooster2.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/WigglyCurvesRegular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/icon/eggs.png" type="Texture" id=5]
[ext_resource path="res://Items/Card.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameTable.gd" type="Script" id=7]
[ext_resource path="res://assets/icon/onegrain.png" type="Texture" id=8]
[ext_resource path="res://assets/icon/funny_egg.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[node name="GameTable" type="Node2D"]
script = ExtResource( 7 )

[node name="WoodenBg" type="Sprite" parent="."]
position = Vector2( 513, 500 )
texture = ExtResource( 1 )

[node name="ControlsUI" type="Node2D" parent="."]

[node name="ChickenAvatarPanel" type="Panel" parent="ControlsUI"]
margin_left = 10.0
margin_top = 25.0
margin_right = 170.0
margin_bottom = 155.0
custom_styles/panel = SubResource( 2 )

[node name="ChickenEggsPanel" type="Panel" parent="ControlsUI"]
margin_left = 901.0
margin_top = 7.0
margin_right = 1016.0
margin_bottom = 119.0
custom_styles/panel = SubResource( 2 )

[node name="PlayerEggsPanel" type="Panel" parent="ControlsUI"]
margin_left = 901.0
margin_top = 480.0
margin_right = 1016.0
margin_bottom = 590.0
custom_styles/panel = SubResource( 2 )

[node name="PlayerGrainsPanel" type="Panel" parent="ControlsUI"]
margin_left = 8.0
margin_top = 480.0
margin_right = 123.0
margin_bottom = 590.0
custom_styles/panel = SubResource( 2 )

[node name="ChickenEggs" type="Sprite" parent="ControlsUI"]
position = Vector2( 959, 63 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="PlayerEggs" type="Sprite" parent="ControlsUI"]
position = Vector2( 959, 535 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="PlayerGrains" type="Sprite" parent="ControlsUI"]
position = Vector2( 65, 535 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="ChickenAvatar" type="Sprite" parent="ControlsUI"]
position = Vector2( 90, 90 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="ChickenEggsLabel" type="Label" parent="ControlsUI"]
margin_left = 844.0
margin_top = 30.0
margin_right = 897.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 1 )
text = "30
"
align = 1
valign = 1

[node name="PlayerEggsLabel" type="Label" parent="ControlsUI"]
margin_left = 844.0
margin_top = 505.0
margin_right = 897.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
valign = 1

[node name="PlayerGrainsLabel" type="Label" parent="ControlsUI"]
margin_left = 120.0
margin_top = 505.0
margin_right = 173.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 1 )
text = "30
"
align = 1
valign = 1

[node name="PlayerBid" type="Node2D" parent="."]

[node name="PlayerGrainBid" type="Sprite" parent="PlayerBid"]
position = Vector2( 399, 540 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="PlayerBidValue" type="Label" parent="PlayerBid"]
margin_left = 424.0
margin_top = 540.0
margin_right = 464.0
margin_bottom = 558.0
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
valign = 1

[node name="ChickenBid" type="Node2D" parent="."]

[node name="ChickenEggBid" type="Sprite" parent="ChickenBid"]
position = Vector2( 400, 80 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )

[node name="ChickenBidValue" type="Label" parent="ChickenBid"]
margin_left = 430.0
margin_top = 70.0
margin_right = 470.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
text = "1"
align = 1
valign = 1

[node name="ChickenCardHolder" type="Node2D" parent="."]
position = Vector2( 390, 220 )

[node name="Card" parent="ChickenCardHolder" instance=ExtResource( 6 )]

[node name="PlayerCardHolder" type="Node2D" parent="."]
position = Vector2( 390, 400 )

[node name="Card2" parent="PlayerCardHolder" instance=ExtResource( 6 )]
